hphp/hack/test/typecheck/trait_reuse/name_order1.php
<?hh
// (c) Meta Platforms, Inc. and affiliates. Confidential and proprietary.

interface I {
  protected function foo(): void;
}

trait E {
  protected function foo(): void {}
}

trait E1 {
  use E;
}

final class C implements I  {
  use E;
  use E1;
}
